[tool.poetry]
name = "geode-clustering"
version = "0.1.0"
description = ""
authors = ["Palani Johnson <palani.johnson@fbgpg.com>"]
readme = "README.md"
packages = [{include = "geode_clustering"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
